found and resolved bug which prevent the app from launching on firefox browser
found and resolved bug which prevent the app from launching on firefox browser + changed scroll bar

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,4 @@
 @import url( 'https://fonts.googleapis.com/css?family=Roboto:300,400,500');
-$color: blue;
 
 * {
     margin: 0;
@@ -8,10 +7,28 @@ $color: blue;
 }
 
 body {
-    //color: $color;
     margin: 0;
     background-color: #F9F9F9;
     background: #37474F;
     font-family: 'Roboto', sans-serif;
 
+}
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #303030;
+}
+
+::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #303030;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #0097A7;
 }
